about scss bug: no align-left

--- a/server/static/scss/page_about_sc.scss
+++ b/server/static/scss/page_about_sc.scss
@@ -24,7 +24,7 @@ h2					{	font-size: 30px;	}
 #soulcrafting-faq	{	@extend .whitesmoke;	}
 
 .faq-question {
-	@extend .align-left;
+	text-align: left;
 	font-weight: bolder;
 }
 
